hashcash-0.26 - 26-Jun-2003 - Adam Back <adam@cypherspace.org>

	* accidentally folded in some non-standard VERBOSE output I was
	  playing with.  This change makes it really standard output
	  comparable to FIPS 180-1 appendices.

	* added a version number -- use -V to display it.  Also -v
	  (lowercase) by itself with no other arguments displays the
	  version umber also.

	* bug fix for quiet output (when not going to a pipe, still
	  need to see output!)

	* update everything to point at http://www.hashcash.org now we
	  have the domain courtesy of it's previous owner Ashish
	  Gulhati <agul@cpan.org> (at no charge -- he declined my
	  offer to pay for it and instead gave it to me!)

	* made a man page for sha1 utility also.

	* add -X option which is a shorthand version of -x 'X-Hashcash:'

	* remove leading and trailing blanks from hashcash tokens to
	  make them more robustly survive email transit.

hashcash-0.25 - 15-May-2003 - Adam Back <adam@cypherspace.org>

	* fix VERBOSE trace output of sha1 implementation to match FIPS
	  180-1 standard test vector examples (Note: this no impact on the
	  result, just allows direct comparison to the test vectors in
	  180-1).  The FIPS 180-1 VERBOSE output got broken when I unrolled
	  the rotates in the round function.

	* remove the automatic turning on of quiet mode if the output
	  is a pipe per note from Simon Josefsson <jas@extundo.com> about
	  how that can be inconvenient for scripting

hashcash-0.24 - 15-Mar-2003 - Adam Back <adam@cypherspace.org>

	* fix minor error which made hashcash_expected_tries a tiny
	  amount less efficient than realised

hashcash-0.23 - 15-Mar-2003 - Adam Back <adam@cypherspace.org>

	* fix error in libhc would always fail in hashcash_check
	  reported by Alan Barclay <gorilla@elaine.furryape.com>; note this
	  bug does not affect the hashcash command line tool as it does not
	  use this API

	* minor Makefile changes

hashcash-0.22 - 16-Aug-2002 - Adam Back <adam@cypherspace.org>
